# Ashen

./: .hgignore  BEAST_UPGRADE_COMPLETE.md  README.md  REALITY_CHECK_GUIDE.md  TEST_RESULTS.md  beast_upgrade_complete.py  check_js_functions.py  comprehensive_dashboard_test.py  dashboard_app.py  dashboard_simple.py  dashboard_test.py  final_test.py  final_verification_test.py  pyproject.toml  quick_dashboard_test.py  test_beast_upgrade.py  test_output.txt  test_reality_check.py  verification_output.txt  verification_output_2.txt  verification_output_3.txt  working_commands.md
.hg/: dirstate  hgrc  last-message.txt  undo.desc
.hg/cache/: branch2-served  rbc-revs-v1  tags2-served
.hg/store/: 00changelog.d  00changelog.i  00manifest.d  00manifest.i  fncache  undo.backup.phaseroots.bck
.hg/wcache/: manifestfulltextcache
data/: services.csv
digital_forensic_surgeon/: .gitignore  .vimrc  PHASE1_GUIDE.md  PHASE2_GUIDE.md  RUN_DASHBOARD.bat  RUN_REALITY_CHECK.bat  RUN_ULTIMATE.bat  START_TRACKERSHIELD.bat  TRACKING_HISTORY_GUIDE.md  VERIFICATION_REPORT.md  __init__.py  build_installer.bat  clean_database.py  cli.py  convert_signatures.py  dashboard_ultimate.py  debug_license.py  enhanced_dashboard.py  generate_amazon_doubleclick_signatures.py  generate_fb_signatures.py  generate_ga_signatures.py  generate_installer.py  generate_tiktok_signatures.py  generate_week3_signatures.py  landing_page.html  launch_reality_check.py  launch_trackershield.py  live.py  reality_check_dashboard.py  scan_history.py  start_live_mode.py  test_all_bugs.py  test_commands.md  test_comprehensive.py  test_dashboard_buttons.py  test_historical_analyzer.py  test_integration.py  test_tracker_shield.py  test_trackershield_proxy.py  tracker_shield_addon.py  (+9 more)
digital_forensic_surgeon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
digital_forensic_surgeon/core/: __init__.py  config.py  entity_mapper.py  exceptions.py  intelligence.py  models.py
forensic_reports/: forensic_report_20251122_145706.html  forensic_report_20251122_151333.html
privacy_shield/: README.md  dns_blocker.py  requirements.txt  run.py
scripts/: build_db.py
(+1080 files in other folders)
