[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-forensic-surgeon"
version = "1.0.0"
description = "Professional digital forensics and privacy audit tool"
authors = [
    {name = "MiniMax Agent", email = "agent@minimax.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]
keywords = ["forensics", "privacy", "security", "digital-footprint"]
dependencies = ["Pillow>=9.0.0", "requests>=2.28.0", "Jinja2>=3.1.0"]

[project.optional-dependencies]
pdf = ["reportlab>=4.0.0"]
full = [
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    "joblib>=1.3.0",
    "pydantic>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
forensic-surgeon = "digital_forensic_surgeon.cli:main"

[project.urls]
Homepage = "https://github.com/minimax/digital-forensic-surgeon"
Documentation = "https://github.com/minimax/digital-forensic-surgeon#readme"
Repository = "https://github.com/minimax/digital-forensic-surgeon"

[tool.setuptools.packages.find]
where = ["."]
include = ["digital_forensic_surgeon*"]

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=digital_forensic_surgeon --cov-report=html --cov-report=term"
